# Sohbet

./: .env.example  .gitignore  .replit  .vercelignore  3rd-Party Service Integration.md  ARCHITECTURE.md  ARCHITECTURE_QUICK_REFERENCE.md  BACKEND_INTEGRATION_SUMMARY.md  BACKEND_SETUP_SUMMARY.md  CMakeLists.txt  CODE_REVIEW_REPORT.md  CORS_ROUTING_FIX.md  DEPLOY_FLYIO.md  DEPLOY_NOW.sh  Dockerfile  Dockerfile.backend  Dockerfile.frontend  FEATURES_NEEDING_ATTENTION.md  FLY_TOML_FIX_EXPLANATION.md  FRONTEND_DEPLOYMENT.md  FRONTEND_OVERHAUL_SUMMARY.md  IDENTIFIED_PROBLEMS.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_QUICK_REFERENCE.md  INTEGRATION_SUMMARY.md  LOGGING_AND_MONITORING.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4A_COMPLETION_REPORT.md  PHASE4C_COMPLETION_REPORT.md  PHASE4_SUMMARY.md  PR_COMPLETION_REPORT.md  QUICK_DEPLOY.md  QUICK_FIX.md  README.md  ROADMAP_STATUS_CHECK.md  SECURITY_UPDATE.md  TROUBLESHOOTING_FIXES.md  VERCEL_404_FIX.md  VERCEL_CHECKLIST.md  (+25 more)
.ccls-cache/@@home@runner@workspace/: @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@asn1.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@asn1err.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@bio.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@bioerr.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@bn.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@bnerr.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@buffer.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@buffererr.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@configuration.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@core.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@core_dispatch.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@crypto.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@cryptoerr.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@cryptoerr_legacy.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@e_os2.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@evp.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@evperr.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@hmac.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@indicator.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@macros.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@obj_mac.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@objects.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@objectserr.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@opensslconf.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@opensslv.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@params.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@safestack.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@sha.h.blob  @nix@store@0225zs9jl9s2y3ai1arbg0h9z7z4bmfi-openssl-3.4.1-dev@include@openssl@stack.h.blob  (+346 more)
.ccls-cache/@home@runner@workspace/: src@main.cpp  (+9 more)
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  test_authentication  test_bcrypt  test_user  test_user_repository  test_voice_service
attached_assets/: Sohbet_1761555335301.sql
backend/: WEBSOCKET_API_FIXES.md  email_verification.cpp  fly.toml  rate_limiter.cpp
docs/: 3rd-Party Service Integration.md  ACADEMIC_FEATURES.md  API_DOCS.md  BEGIN_DEVELOPMENT_SUMMARY.md  DEMO_ACCOUNT_FIX.md  DEPLOYMENT_GUIDE.md  EMAIL_VERIFICATION_GUIDE.md  ENHANCED_FEATURES.md  EXECUTIVE_SUMMARY_HYBRID_WEBRTC.md  FEATURES_NEEDING_ATTENTION.md  IMPLEMENTATION_ROADMAP.md  INTEGRATION_SUMMARY.md  Issues.md  MIGRATION_GUIDE_V1_TO_V2.1.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4A_COMPLETION_REPORT.md  PHASE4C_COMPLETION_REPORT.md  PHASE4_SUMMARY.md  PR_COMPLETION_REPORT.md  ROADMAP_STATUS_CHECK.md  SECURITY_UPDATE.md  TROUBLESHOOTING_FIXES.md  USER_HELPERS_AND_MIGRATIONS.md  VOICE_INTEGRATION.md  WEBRTC_DEVELOPER_GUIDE.md  WEBRTC_HYBRID_ARCHITECTURE.md  WEBRTC_HYBRID_ARCHITECTURE_CRITICAL_FIXES.md  WEBRTC_HYBRID_PRODUCTION_DEPLOYMENT.md  WEBRTC_PRODUCTION_CHECKLIST.md  WEBRTC_VALIDATION_REPORT.md  WEBSOCKET_FIX_SUMMARY.md  WEBSOCKET_HANDSHAKE_FIX.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_INFRASTRUCTURE.md  WEBSOCKET_TLS_FIX.md
examples/: mobile-demo_app.tsx  rate_limiter_example.cpp  user_management_example.cpp
frontend/: .env.example  .env.production  Dockerfile.frontend  README.md  i18n.ts  middleware.ts  next.config.ts  package-lock.json  package.json  proxy.ts  tsconfig.tsbuildinfo  vercel.json
migrations/: 000_create_users.sql  001_social_features.sql  002_clear_open_voice_sessions.sql  002_email_verification.sql  003_seed_turkish_organizations.sql  004_enhanced_features.sql  005_study_buddy_matching.sql
scripts/: import_users.py  start-fullstack_Version2.sh
social-media-app/: .editorconfig  README.md  package.json  pnpm-workspace.yaml  tsconfig.base.json
src/: main.cpp  validation_test.cpp
tests/: test_admin_permissions.cpp  test_authentication.cpp  test_bcrypt.cpp  test_config_env.cpp  test_demo_student_post.cpp  test_migration_runner.cpp  test_multipart_parser.cpp  test_rate_limiter.cpp  test_storage_service.cpp  test_user.cpp  test_user_helpers.cpp  test_user_repository.cpp  test_voice_service.cpp  test_websocket_server.cpp
(+318 files in other folders)
